Set content-type when serving blobs

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "human-time": "^0.0.1",
     "hyperscript": "^2.0.2",
     "lrucache": "^1.0.2",
+    "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-cat": "^1.1.11",
     "pull-hash": "^1.0.0",
+    "pull-identify-filetype": "^1.1.0",
     "pull-paginate": "^1.0.0",
     "pull-paramap": "^1.2.1",
     "pull-stream": "^3.5.0",
