--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "stream-to-pull-stream": "^1.7.2"
   },
   "devDependencies": {
-    "ssb-client": "^4.4.0"
+    "ssb-client": "^4.4.0",
+    "ssb-config": "^2.2.0"
   },
   "author": "cel",
   "homepage": "https://git.scuttlebot.io/%25YAg1hicat%2B2GELjE2QJzDwlAWcx0ML%2B1sXEdsWwvdt8%3D.sha256",
