--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-cat": "^1.1.11",
-    "pull-defer": "^0.2.2",
     "pull-hash": "^1.0.0",
     "pull-hyperscript": "^0.2.2",
     "pull-identify-filetype": "^1.1.0",
-    "pull-many": "^1.0.8",
     "pull-paginate": "^1.0.0",
     "pull-paramap": "^1.2.1",
     "pull-stream": "^3.5.0",
     "ssb-avatar": "^0.2.0",
+    "ssb-contact": "^1.0.0",
     "ssb-marked": "^0.7.1",
     "ssb-mentions": "^0.2.0",
     "ssb-party": "^0.3.0",
