--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-cat": "^1.1.11",
+    "pull-git-packidx-parser": "^1.0.0",
     "pull-hash": "^1.0.0",
     "pull-hyperscript": "^0.2.2",
     "pull-identify-filetype": "^1.1.0",
     "pull-paginate": "^1.0.0",
     "pull-paramap": "^1.2.1",
+    "pull-reader": "^1.2.9",
     "pull-stream": "^3.5.0",
     "ssb-contact": "^1.0.0",
     "ssb-marked": "^0.7.1",
