--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hashlru": "^2.1.0",
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
+    "pull-box-stream": "^1.0.12",
     "pull-cat": "^1.1.11",
     "pull-hash": "^1.0.0",
     "pull-hyperscript": "^0.2.2",
