--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "human-time": "^0.0.1",
     "hyperscript": "^2.0.2",
     "hashlru": "^2.1.0",
+    "jpeg-autorotate": "^3.0.0",
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-cat": "^1.1.11",
