--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "busboy": "^0.2.14",
     "emoji-named-characters": "^1.0.2",
     "emoji-server": "^1.0.0",
+    "hashlru": "^2.1.0",
     "human-time": "^0.0.1",
     "hyperscript": "^2.0.2",
-    "hashlru": "^2.1.0",
     "jpeg-autorotate": "^3.0.0",
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-cat": "^1.1.11",
+    "pull-concat": "^1.1.1",
     "pull-git-packidx-parser": "^1.0.0",
     "pull-hash": "^1.0.0",
     "pull-hyperscript": "^0.2.2",
