--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "emoji-named-characters": "^1.0.2",
     "emoji-server": "^1.0.0",
     "hashlru": "^2.1.0",
+    "highlight.js": "^9.12.0",
     "human-time": "^0.0.1",
     "hyperscript": "^2.0.2",
     "jpeg-autorotate": "^3.0.0",
