--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "plain ssb web ui",
   "dependencies": {
     "asyncmemo": "^1.0.0",
+    "base64-url": "^2.0.0",
     "busboy": "^0.2.14",
     "emoji-named-characters": "^1.0.2",
     "emoji-server": "^1.0.0",
