--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pull-paramap": "^1.2.1",
     "pull-reader": "^1.2.9",
     "pull-stream": "^3.5.0",
+    "ssb-client": "http://localhost:8989/blobs/get/&FA90P0B3XaDw/mcD9AVboacsU5mABQtSUofwIXOC6fo=.sha256",
     "ssb-contact": "^1.0.0",
     "ssb-marked": "^0.7.1",
     "ssb-mentions": "http://localhost:8989/blobs/get/&GKwsJ3ykvOXc24wyNuWBdmnCFpQ+Ltd9ggjoOuOF/Pg=.sha256",
@@ -33,7 +34,7 @@
     "stream-to-pull-stream": "^1.7.2"
   },
   "scripts": {
-    "start": "ssb-party ."
+    "start": "ssb-client ."
   },
   "author": "cel",
   "homepage": "https://git.scuttlebot.io/%25YAg1hicat%2B2GELjE2QJzDwlAWcx0ML%2B1sXEdsWwvdt8%3D.sha256",
