--- a/package.json
+++ b/package.json
@@ -13,21 +13,19 @@
     "human-time": "^0.0.1",
     "hyperscript": "^2.0.2",
     "jpeg-autorotate": "^3.0.0",
-    "looper": "^4.0.0",
     "mime-types": "^2.1.12",
     "multicb": "^1.2.1",
     "pull-box-stream": "^1.0.12",
     "pull-cat": "^1.1.11",
-    "pull-git-packidx-parser": "^1.0.0",
     "pull-hyperscript": "^0.2.2",
     "pull-identify-filetype": "^1.1.0",
-    "pull-kvdiff": "^0.0.1",
     "pull-paginate": "^1.0.0",
     "pull-paramap": "^1.2.1",
     "pull-reader": "^1.2.9",
     "pull-stream": "^3.5.0",
     "ssb-client": "http://localhost:8989/blobs/get/&EAaUpI+wrJM5/ly1RqZW0GAEF4PmCAmABBj7e6UIrL0=.sha256",
     "ssb-contact": "^1.2.0",
+    "ssb-git": "^0.6.0",
     "ssb-marked": "^0.7.1",
     "ssb-mentions": "http://localhost:8989/blobs/get/&GjuxknqKwJqHznKueFNCyIh52v1woz5PB41vqmoHfyM=.sha256",
     "ssb-sort": "^1.0.0",
