--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "asyncmemo": "^1.1.0",
     "base64-url": "^2.0.0",
     "busboy": "^0.2.14",
+    "diff": "^3.3.1",
     "emoji-named-characters": "^1.0.2",
     "emoji-server": "^1.0.0",
     "hashlru": "^2.1.0",
