Support line comments on blobs as well as diffs

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "pull-paginate": "^1.0.0",
     "pull-paramap": "^1.2.1",
     "pull-reader": "^1.2.9",
+    "pull-split": "^0.2.0",
     "pull-stream": "^3.5.0",
+    "pull-utf8-decoder": "^1.0.2",
     "ssb-client": "http://localhost:8989/blobs/get/&EAaUpI+wrJM5/ly1RqZW0GAEF4PmCAmABBj7e6UIrL0=.sha256",
     "ssb-contact": "^1.2.0",
     "ssb-git": "^0.6.0",
